team955.org/css/customStyles.css
@font-face {
    font-family: "GoodTimes";
    src: url(../fonts/goodtimes.ttf);
}

@font-face {
    font-family: "OrbitronBold";
    src: url(../fonts/Orbitron-Bold.ttf);
}

@font-face {
    font-family: "OpenSans";
    src: url(../fonts/OpenSans-Regular.ttf);
}

@font-face {
    font-family: "RalewayLight";
    src: url(../fonts/Raleway-Light.ttf);
}

@font-face {
    font-family: "RalewayRegular";
    src: url(../fonts/Raleway-Regular.ttf);
}

@font-face {
    font-family: "RalewayMedium";
    src: url(../fonts/Raleway-Medium.ttf);
}

/*Info
#9c0812 is maroon color
#F5B50C is gold color
*/
body {
  background-image: url('../images/bg.png');
  font-family: 'OpenSans';
}

#rO .navbar-default .navbar-nav > .open > a,
#rO .navbar-default .navbar-nav > .active > a {
  background-image:none;
  background-color: #000;
  color: #fff;
}

#rO .navbar-toggle {
  background-color: transparent;
}

/*general nav styles*/
#rO .navbar {
  background-image: none;
  border: none;
  background-color: #F5B50C;
  position: relative;
  height: auto !important;
  padding-top: 12px;
}

#rO .navbar-wrapper .container-fluid {
  padding: 0;
}

#rO .navbar-default {
  position: relative;
  margin: 0;
}

#rO .navbar-nav > li > a {
  color: #000;
  text-shadow: none;
  font-family: "RalewayMedium";
  text-transform: uppercase;
}

#rO .navbar-toggle {
  border: none;
  border-radius: 0;
  color: #000;
}

#rO .dropdown-menu > li > a:hover,
#rO .dropdown-menu > li > a:focus {
  background-image: none;
  background-color: #9c0812;
}

#rO .dropdown-menu {
  border: none;
  padding: 0;
  background-image: none;
  background-color: transparent;
  webkit-box-shadow: none;
  box-shadow: none;
}

#rO .dropdown-menu > li > a {
  background-color: #000;
  background-image: none;
  color: #fff;
  padding: 7px 15px;
}

#rO .dropdown-menu > .jim > a,
#rO .dropdown-menu > .jim > a:hover,
#rO .dropdown-menu > .jim > a:focus {
  background-color: transparent;
  background-image: none;
  color: #fff;
  padding: 0;
}

/* Navbar big text */

#rO .navbar-brand {
  font-family: "OrbitronBold";
  text-transform: uppercase;
  color: #000;
  margin: 0;
  display: block;
  text-shadow: none;
  padding: 5px 15px;
}

#rO .navbar-header {
    width: 100%;
    padding: 0;
}

#rO .navbar-brand:hover h1{
  color: #9c0812;
}

#rO .navbar-brand h1 {
  margin: 0;
}

/* carousel things */
#rO .carousel {
  position: relative;
  height: 500px;
  overflow: hidden;
  margin-bottom: 5%;
  -webkit-transition: height 1s ease;
  transition: height 1s ease;
}

#rO .carousel .carousel-indicators {
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
  opacity: 0;
}

#rO .carousel:hover .carousel-indicators {
  opacity: 1;
}

#rO .carousel .item {
  height: 500px;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-size: cover;
}

#rO .slide1 {
  background-image: url('../images/slide1.JPG');
  background-position: 50% 40%;
}

#rO .slide2 {
  background-image: url('../images/slide2.JPG');
  background-position: 50% 77%;
}

#rO .slide3 {
  background-image: url('../images/Slide3.JPG');
  background-position: 50% 77%;
}

/* things for the content */
#rO .subpageBox a,
#rO .bodyText a {
  border-bottom: dotted 1px #000;
  color: #000;
  text-decoration: none;
}

#rO a.dark {
  color: #EBEBEB;
  border-bottom: dotted 1px #EBEBEB;
}

#rO .subpageBox a:active,
#rO .subpageBox a:hover,
#rO .bodyText a:active,
#rO .bodyText a:hover {
  color: #7D7D7D;
  border-bottom: none;
}

#rO .row {
  width: 100%;
  max-width: 2000px;
  padding: 0 7%;
  float: left;
  margin: 0;
  margin-bottom: 2%;
}

#rO .centerV {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

#rO .bigTitleText {
  font-size: 10em;
  text-transform: uppercase;
}

#rO h2 {
  border-bottom: 1px solid #7d7d7d;
  font-family: 'RalewayLight';
  font-size: 3em;
  text-transform: uppercase;
}

#rO .headerNB {
  border: none;
  font-size: 2.5em;
  font-family: "RalewayLight";
  text-align: center;
}

#rO .logoImg {
  background-color: #fff;
  padding: 0;
}

#rO .titleR {
  text-align: right;
  padding-right: 5%;
}

#rO .titleL {
  text-align: left;
  padding-left: 5%;
}

#rO .titleC {
  text-align: center;
}

#rO q {
  margin: 0 2%;
  font-style: italic;
}

#rO p {
  font-size: 1.25em;
}

#rO .fullW {
  width: 100%;
  height: auto;
}

#rO .roboR {
  float: right;
}

#rO .imgBorder {
  border: 10px solid #fff;
  width: 100%;
  height: auto;
}

#rO .crossScreenImg {
  max-width: none;
  height: 500px;
  overflow: hidden;
  color: #fff;
  background-position: 50% 50%;
  background-size: cover;
  background-repeat: no-repeat;
  margin: 0;
  margin-bottom: 5%;
  padding: 0;
  width: 100%;
  -webkit-transition: height 1s ease;
  transition: height 1s ease;
}

#rO .crossScreenImg:before {
  content: "";
  position: absolute;
  width: inherit;
  height: inherit;
  margin: 0;
  background-color: rgba(0,0,0,0.7);
}

#rO .darkBG {
  color: #EBEBEB;
}

#rO .crossScreenImgCols {
  -moz-column-count: 2;
  -webkit-column-count: 2;
  column-count: 2;
  margin: 0 auto;
  width: 50%;
}

#rO .introUL {
  color: #fff;
}

#rO .introUL b {
  text-transform: uppercase;
}

#rO abbr {
  border-bottom: none;
}

/* jump to top */
.sometimesUp {
  background-color: rgba(155,155,155,.2);
  position: fixed;
  bottom: 10px;
  right: -45px;
  border-radius: 5px 0 0 5px;
  padding: 4px 10px;
  height: 40px;
  font-size: 25px;
  -webkit-transition: right 0.5s;
  transition: right 0.5s;
  cursor: pointer;
}

/* mobile styling*/
@media screen and (max-width: 767px) {
  #rO .navbar{
    padding: 5px 0;
  }

  #rO .titleR,
  #rO .titleL{
    text-align: center;
    padding: 0;
  }

  #rO .crossScreenImgCols  {
    column-count: 1;
    -moz-column-count: 1;
    -webkit-column-count: 1;
    width: 90%;
    text-align: center;
  }

  .carousel,
  .crossScreenImg {
    height: 300px;
  }

  .quarterRow {
    border-top: 1px solid #7d7d7d;
  }
}


/*PAGE SPECIFIC THINGS*/
/* this is where the background images for the link-divs (the ones which define the start of a subpage) will be styled */
/*about.php files first*/
#team {
  background-image: url("../images/slide1.JPG");
}

#FIRST {
  background-image: url("../images/pagePhotos/FIRST.jpg");
}

#structure {
  background-image: url("../images/pagePhotos/structure.jpg");
}

#mentors {
  background-image: url("../images/pagePhotos/mentors.jpg");
}

/*support.php files next...*/
#donations {
  background-image: url("../images/pagePhotos/donations.jpg");
}

#sponsors {
  background-image: url("../images/pagePhotos/sponsors.jpg");
}

